fixed bottom bar overflow

--- a/src/features/home/BottomBar.less
+++ b/src/features/home/BottomBar.less
@@ -4,5 +4,6 @@
   .bottom-bar-paper{
     height: 300px;
     background-color: #f5f5f5;
+    overflow: hidden;
   }
 }
